# copilot

./: .env.example  .gitignore  README.md  docker-compose.override.yaml  docker-compose.yaml
.github/workflows/: build_and_publish.yaml
chat-ui/: .dockerignore  .gitignore  .prettierignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
chat-ui/scripts/: dev-entrypoint.sh  ensure-db.mjs
chat-ui/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
chat-ui/src/components/: app-shell.tsx  chat-sidebar.tsx  site-header.tsx
chat-ui/src/db/: index.ts  schema.ts
chat-ui/src/lib/: app-version.ts  chat-deletion.test.ts  chat-deletion.ts  chat-list-cache.ts  chat-snapshots.test.ts  chat-snapshots.ts  copilot-backend.ts  copilot-stream.test.ts  copilot-stream.ts  embed-chat-search-params.ts  embed-chat.test.ts  embed-chat.ts  http-client.ts  things-api.ts  wot-api.ts  (+2 more)
code-executor/: Dockerfile  README.md  pyproject.toml
code-executor/code_executor/: session_pool.py  utils.py
code-executor/code_executor/api/: __init__.py  app.py  dependencies.py  routes.py
code-executor/code_executor/models/: __init__.py  schemas.py  settings.py
copilot/: .env.example  Dockerfile  README.md  pyproject.toml
copilot/copilot/: __init__.py  agent.py  agui_messages.py  server.py  thread_store.py  thread_titles.py
copilot/copilot/few_shots/: __init__.py  analysis.py  control.py
copilot/copilot/graph/: __init__.py  builder.py  checkpointer.py  nodes.py  tool_groups.py
copilot/copilot/models/: __init__.py  settings.py
copilot/copilot/prompts/: __init__.py  analysis.py  control.py  mapping.py  respond.py  router.py
copilot/copilot/tools/: __init__.py  ask_specialist_agent.py  delegate_specialist_agent.py  get_current_time.py  job_scheduler.py  list_specialist_agents.py  run_code.py
copilot/tests/: test_agui_messages.py  test_analysis_guidance.py  test_checkpointer.py  test_job_scheduler.py  test_nodes.py  test_prompt_trimming.py  test_server.py  test_thread_store.py  test_thread_titles.py  test_tool_groups.py
data-replay/: Dockerfile  README.md  build_fixtures.py  replay_server.py  requirements.txt  td_generator.py
data-replay/tests/: test_replay_server.py  test_td_generator.py
docker/: Dockerfile
job-runner/: Dockerfile  README.md  pyproject.toml
job-runner/job_runner/: __init__.py  api.py  code_executor_client.py  copilot_client.py  models.py  runtime_client.py  service.py  settings.py  storage.py  stream.py
presentation/: config.js  index.html
specialist-agent/: Dockerfile  README.md  pyproject.toml
specialist-agent/specialist_agent/: __init__.py  app.py  models.py  service.py
(+53 files in other folders)
