[project]
name = "code-executor"
version = "0.2.0"
description = "exec()-based Python code execution service for Smart Living Copilot"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.7",
    # Analytics & data
    "pandas>=2.2",
    "numpy>=1.26",
    # Plotting
    "matplotlib>=3.9",
    "plotly>=5.24",
    "seaborn>=0.13",
    # HTTP
    "requests>=2.31",
    "httpx>=0.27",
    # Utilities
    "scipy>=1.14",
    "openpyxl>=3.1",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
