[project]
name = "job-runner"
version = "0.1.0"
description = "Event and time based job runner for Smart Living Copilot"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.7",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "redis>=5.2",
]

[project.optional-dependencies]
dev = ["ruff>=0.11"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["job_runner"]

[tool.ruff]
target-version = "py312"
line-length = 100
