[project]
name = "specialist-agent"
version = "0.1.0"
description = "Specialist agent runtime driven by Thing Descriptions"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.27",
    "pydantic-settings>=2.7",
    "langchain-openai>=1.1",
    "langchain-mcp-adapters>=0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["specialist_agent"]
